--- a/gvr-remote-scripting/AndroidManifest.xml
+++ b/gvr-remote-scripting/AndroidManifest.xml
@@ -33,6 +33,7 @@
                   android:icon="@drawable/gearvr_logo"
                   android:screenOrientation="landscape"
                   android:launchMode="singleTask"
+                  android:windowSoftInputMode="stateAlwaysHidden"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
