--- a/gvr-meshanimation/gvrmeshanimation/build.gradle
+++ b/gvr-meshanimation/gvrmeshanimation/build.gradle
@@ -25,4 +25,6 @@ android {
 
 dependencies {
     compile project(':framework')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: 'src/main/libs', include: ['*.jar'])
 }
