--- a/gvr-x3d-360photo/app/src/main/AndroidManifest.xml
+++ b/gvr-x3d-360photo/app/src/main/AndroidManifest.xml
@@ -15,12 +15,13 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="org.gearvrf.simplesample"
+    package="org.gearvrf.gvrx3d360photo"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
