--- a/gvr-qrcode/app/build.gradle
+++ b/gvr-qrcode/app/build.gradle
@@ -18,11 +18,21 @@ dependencies {
             releaseCompile(name: 'x3d-release', ext: 'aar')
         }
         implementation "com.google.zxing:core:3.3.2"
-//        implementation 'com.google.ar:core:1.0.0'
+        implementation 'com.android.support:appcompat-v7:27.0.2'
+        compile(name:'core-1.0.0', ext:'aar')
+        //implementation 'com.google.ar:core:1.0.0'
     } else {
         implementation "org.gearvrf:x3d:$gearvrfVersion"
         implementation "com.google.zxing:core:3.3.2"
-//        implementation 'com.google.ar:core:1.0.0'
+        implementation 'com.android.support:appcompat-v7:27.0.2'
+        compile(name:'core-1.0.0', ext:'aar')
+        //implementation 'com.google.ar:core:1.0.0'
+    }
+}
+
+repositories {
+    flatDir {
+        dirs 'src/main/libs'
     }
 }
 
