--- a/gvr-qrcode/app/build.gradle
+++ b/gvr-qrcode/app/build.gradle
@@ -20,15 +20,29 @@ dependencies {
         implementation "com.google.zxing:core:3.3.2"
         implementation 'com.android.support:appcompat-v7:27.0.2'
         implementation 'com.google.ar:core:1.0.0'
+//        implementation 'edu.cmu.pocketsphinx.android:pocketsphinx-android:5prealpha@aar'
+        compile fileTree(dir: 'libs', include: ['*.jar'])
+        compile files('libs/pocketsphinx-android-5prealpha-nolib.jar') 
     } else {
         implementation "org.gearvrf:x3d:$gearvrfVersion"
         implementation "com.google.zxing:core:3.3.2"
         implementation 'com.android.support:appcompat-v7:27.0.2'
         implementation 'com.google.ar:core:1.0.0'
+        compile fileTree(dir: 'libs', include: ['*.jar'])
+        compile files('libs/pocketsphinx-android-5prealpha-nolib.jar') 
+//        implementation 'edu.cmu.pocketsphinx.android:pocketsphinx-android:5prealpha@aar'
+
     }
 }
 
+ant.importBuild 'assets.xml'
+preBuild.dependsOn(list, checksum)
+clean.dependsOn(clean_assets)
+
 repositories {
+    maven {
+        url "https://dl.bintray.com"
+    }
     flatDir {
         dirs 'src/main/libs'
     }
